2003-11-19  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-registry.el (gnus-registry-track-extra): make it a set of
	choices instead of a boolean
	(gnus-registry-track-subject-p, gnus-registry-track-sender-p):
	new convenience functions
	(gnus-registry-split-fancy-with-parent): use convenience
	functions, also don't return extra tracking info if sender or
	subject is found in more than one groups
	(gnus-registry-add-group): use new convenience functions to
	decide if sender and subject should be tracked

	* gnus.el (ham-process-destination): add 'respool option,
	unused by spam.el yet

2003-11-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-score.el (gnus-decay-score): Return a surely smaller value
	than the argument in XEmacs.

2003-11-18  Reiner Steib  <Reiner.Steib@gmx.de>

	* message.el (message-insert-to): Don't use `gnus-message'.
	(message-header-synonyms): New variable.
	(message-carefully-insert-headers): Use it (check for synonyms).
	Added doc-string.  From Sam Steingold <sds@gnu.org>.

2003-11-17  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* html2text.el (html2text-remove-tags): Remove the tag in a
	simpler way to avoid inflooping.

2003-11-17  Simon Josefsson  <jas@extundo.com>

	* imap.el (imap-gssapi-auth-p): Don't check capability (some
	servers remove AUTH=GSSAPI from capability response returned after
	successful authentication).

2003-11-16  Jesper Harder  <harder@ifa.au.dk>

	* gnus.el (gnus-getenv-nntpserver): Fix regexp and simplify.
	Reported by Artem Chuprina <ran@ran.pp.ru>.

2003-11-14  Simon Josefsson  <jas@extundo.com>

	* mm-util.el (mm-charset-synonym-alist): Map BIG5-HKSCS to BIG5
	when it isn't available.

2003-11-13  Alex Schroeder  <alex@gnu.org>

	* nnrss.el (nnrss-check-group): Use dc:contributor if neither
	rss:author nor dc:creator is provided.

2003-11-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-decode.el (mm-dissect-buffer): Save start="<id>" value
	contained in Content-Type header of multipart/related messages.
