@@ -1975,9 +1975,7 @@ mail groups."
      :tag "Destination for ham articles at summary exit from a spam group"
      (string :tag "Move to a group")
      (repeat :tag "Move to multiple groups"
-	     (choice
-	      (string :tag "Destination group")
-	      (const  :tag "Respool" respool)))
+	     (string :tag "Destination group"))
      (const :tag "Respool" respool)
      (const :tag "Do nothing" nil))
    :function-document
@@ -2001,9 +1999,7 @@ mail groups, and only works in spam groups."
        :tag "Destination for ham articles at summary exit from spam group"
        (string :tag "Move to a group")
        (repeat :tag "Move to multiple groups"
-	       (choice
-		(string :tag "Destination group")
-		(const  :tag "Respool" respool)))
+		(string :tag "Destination group"))
        (const :tag "Respool" respool)
        (const :tag "Expire" nil))))
    :parameter-document
